dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([arpack], [0.93], [inform@tiker.net])

AM_INIT_AUTOMAKE([1.9 foreign])

AX_BLAS
AC_PROG_FC
AC_PROG_F77
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

if test "$ac_compiler_gnu" = yes; then
  FFLAGS="-ffixed-line-length-132 $FFLAGS"
fi

AC_CONFIG_FILES([Makefile SRC/Makefile])
AC_OUTPUT
